--- a/source/blog/2014-05-17-testpost.html.markdown
+++ b/source/blog/2014-05-17-testpost.html.markdown
@@ -5,10 +5,4 @@ tags: blog
 ---
 
 
-Blogをやろうと言い始めてはや２年。
-ドメインもサーバーもとってWordpressも作ってありましたが、ずっと放置している間に、Wordpress使いからRails使いにJobチェンジをしてしまったので
-middleman + Github Pagesでブログ作りなおしてみました。
-
-まずは、最近勉強したこととか最近読んだ本の紹介とかしていこうかなっと考えてます。
-
-三日坊主的なやつにならないようがんばりまする。
+middleman + Github Pagesでブログリスタート
